syntax = "proto3";

package pb;

message MetaData{
  string name = 1;
  string type = 2;
}

message File {
  bytes content = 1;
}

enum Status {
  PENDING = 0;
  IN_PROGRESS = 1;
  SUCCESS = 2;
  FAILED = 3;
}

message FileUploadRequest {
  oneof request {
    MetaData metadata = 1;
    File file = 2;
  }
}

message FileUploadResponse {
  string name = 1;
  Status status = 2;
}


service HrTimeSheetService {
  rpc UploadFile(FileUploadRequest) returns (stream FileUploadResponse){}
//  rpc
}